listas onetomany enrutadas

--- a/src/app/component/application/evento/routed/evento-plist-admin-routed/evento-plist-admin-routed.component.html
+++ b/src/app/component/application/evento/routed/evento-plist-admin-routed/evento-plist-admin-routed.component.html
@@ -25,7 +25,9 @@
               </th>
               <th (click)="setOrder('fecha')">Fecha</th>
               <th (click)="setOrder('descripcion')">Descripcion</th>
-              <th>eventos</th>
+              <th>Usuarios</th>
+              <th>Multimedias</th>
+              <th>Acciones</th>
             </tr>
           </thead>
           <tbody>
@@ -33,7 +35,10 @@
               <td>{{evento.id}}</td>
               <td>{{evento.fecha}}</td>
               <td>{{evento.descripcion}}</td>
-              <td>{{evento.participaciones}} <button class="btn btn-sm btn-primary float-end" (click)="openModalParticipacion(evento.id, evento.participaciones)">Abrir Lista</button></td>
+              <td><button class="btn btn-outline-secondary btn-sm" (click)="openModalParticipacion(evento.id, evento.participaciones)"
+                [disabled]="evento.participaciones<=0">{{evento.participaciones}}</button></td>
+              <td><button class="btn btn-outline-secondary btn-sm" [routerLink]="['/admin','multimedia','plist','evento',evento.id]"
+                [disabled]="evento.multimedias<=0">{{evento.multimedias}}</button></td>
               <td>
                 <div class="btn-group" role="group" aria-label="Herramientas">
                   <button class="btn btn-sm btn-primary" [routerLink]="['/admin/evento/view',evento.id]">
