correcion plist usuario

--- a/src/app/component/application/usuario/routed/usuario-plist-admin-routed/usuario-plist-admin-routed.component.html
+++ b/src/app/component/application/usuario/routed/usuario-plist-admin-routed/usuario-plist-admin-routed.component.html
@@ -37,7 +37,7 @@
               <th (click)="setOrder('email')">Email</th>
               <th (click)="setOrder('usuario')">Usuario</th>
               <th (click)="setOrder('tipousuario')">Tipo Usuario</th>
-              <th (click)="setOrder('participaciones')">Participaciones</th>
+              <th>Participaciones</th>
               <th>Acciones</th>
             </tr>
           </thead>
