--- a/src/app/component/shared/unrouted/menu/menu.component.html
+++ b/src/app/component/shared/unrouted/menu/menu.component.html
@@ -30,6 +30,10 @@
             <a class="nav-link" aria-current="page" routerLinkActive="active"
               routerLink="admin/evento/plist">Eventos</a>
         </li>
+        <li class="nav-item" *ngIf="strTipousuario=='1' || strTipousuario=='2'" >
+            <a class="nav-link" aria-current="page" routerLinkActive="active"
+              routerLink="user/evento/plist">Eventos</a>
+        </li>
         <li class="nav-item" *ngIf="strTipousuario=='1'">
             <a class="nav-link" aria-current="page" routerLinkActive="active"
               routerLink="admin/multimedia/plist">Multimedias</a>
