login funcional y diseñado, falta fondo y home falta fondo

--- a/src/app/component/shared/routed/home/home.component.html
+++ b/src/app/component/shared/routed/home/home.component.html
@@ -1,4 +1,4 @@
-<div id="fondo">
+<div>
     <div id="container">
         <div id="texto">
             <div class="fondo-texto" id="texto1">
@@ -17,7 +17,7 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum maximus ornare. Aliquam erat
                 metus, efficitur lacinia ultrices at, ultrices eget nunc. Pellentesque in condimentum nisi. Donec
                 hendrerit metus lacus, non congue dolor mollis ut. Suspendisse blandit pellentesque dignissim. Nunc
-                tincidunt dolor in eros tristique suscipit. Vivamus at arcu sed justo iaculis venenatis. 
+                tincidunt dolor in eros tristique suscipit. Vivamus at arcu sed justo iaculis venenatis.
             </div>
         </div>
     </div>
