--- a/src/app/component/shared/routed/login/login.component.html
+++ b/src/app/component/shared/routed/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="mobile-screen">
     <div class="header">
-      <h1>Log in</h1>
+      <h1>Inicio de sesión</h1>
     </div>
 
     <div class="logo">
@@ -16,7 +16,7 @@
             <input type="password" id="password" class="form-control" placeholder="Enter password" name="password"
               formControlName="password" />
           </div>
-      <div (click)="login()"  class="login-btn">Log in</div>
+      <button (click)="login()"  class="login-btn">Iniciar sesión</button>
     </form>
 
   </div>
