--- a/src/app/component/shared/routed/login/login.component.css
+++ b/src/app/component/shared/routed/login/login.component.css
@@ -66,8 +66,9 @@
     border: none;
     border-left: 5px solid;
     background: none;
+    background-color: #d0dee9;
     border-color: #09a9d0;
-    color: white;
+    color: black;
     font-weight: 300;
     font-size: 18px;
     -webkit-transition: all .2s ease-in-out;
@@ -83,14 +84,14 @@
     border-color: transparent;
   }
 
-  a{
+  button{
     text-decoration: none;
   }
 
   .login-btn{
     border-radius: 4px;
     text-align: center;
-    background: #222543;
+    background: #09a9d0;
     color: #fff;
   }
 
@@ -135,19 +136,20 @@
     font-weight: 100;
   }
 
-  #fpass-form,
-  #registration-form{
-    display: none;
+
+  .login-btn{
+    background-color: #222543;
+    color: #09a9d0;
+    border-color: #09a9d0;
+    border-radius: 0px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   }
 
-  /* Change colors container */
-  .change-colors-container{
-    position: absolute;
-    height: 300px;
-    width: 50px;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    background: rgba(255,255,255,.5);
-  }
+  .login-btn:hover {
+    background-color: #09a9d0;
+    color: #222543;
+    border-color: #222543;
+    right: 0px;
+}
