--- a/src/app/component/application/usuario/routed/usuario-plist-admin-routed/usuario-plist-admin-routed.component.html
+++ b/src/app/component/application/usuario/routed/usuario-plist-admin-routed/usuario-plist-admin-routed.component.html
@@ -21,8 +21,8 @@
         <div class="col-md text-end">
           <h5 class="text-muted">Total de registros en la consulta {{responseFromServer.totalElements}}</h5>
         </div>
-        <table class="table table-bordered table-striped">
-          <thead>
+        <table class="table table-bordered table-striped table-hover">
+          <thead class="table-dark">
             <tr>
               <th (click)="setOrder('id')">ID
                 <fa-icon *ngIf="sortField=='id'&&sortDirection=='asc'" [icon]="faArrowUp"></fa-icon>
@@ -51,7 +51,7 @@
               <td>{{usuario.usuario}}</td>
               <td (click)="setFilterByTipousuario(usuario.tipousuario.id)">
                 {{usuario.tipousuario.id}}-{{usuario.tipousuario.nombre}}</td>
-                <td><button class="btn btn-outline-secondary btn-sm" (click)="openModalParticipacion(usuario.id, usuario.participaciones)"
+                <td class="bg-"><button class="btn btn-outline-secondary btn-sm" (click)="openModalParticipacion(usuario.id, usuario.participaciones)"
                         [disabled]="usuario.participaciones<=0">{{usuario.participaciones}}</button></td>
               <td>
                 <div class="btn-group" role="group" aria-label="Herramientas">
