boton unirse funciona

--- a/src/app/component/application/evento/routed/user/evento-plist-user-routed/evento-plist-user-routed.component.css
+++ b/src/app/component/application/evento/routed/user/evento-plist-user-routed/evento-plist-user-routed.component.css
@@ -47,6 +47,7 @@ article.card{
     display: flex;
     flex-flow: wrap;
     gap: 3%;
+    justify-content: center;
 }
 .boton-perfil-card{
     float: right;
