--- a/src/app/component/application/evento/routed/user/evento-plist-user-routed/evento-plist-user-routed.component.html
+++ b/src/app/component/application/evento/routed/user/evento-plist-user-routed/evento-plist-user-routed.component.html
@@ -1,8 +1,8 @@
 <div class="fondo">
-<div class="card-wrap mx-5">
+<div class="card-wrap">
     <article class="card" *ngFor="let evento of responseFromServer.content">
         <header class="header-card">
-            <img src="../../../../../../../assets/fondomarruecos.jpg" alt="" />
+            <img src="assets/fondomarruecos.jpg" alt="" />
         </header>
         <footer class="footer-card">
             <div class="categoria-card">
@@ -16,11 +16,31 @@
                     {{evento.descripcion}}
                 </p>
             </div>
-            <div class="boton-perfil-card">
-                <a class="btn btn-primary" *ngIf="fechaisLater(evento.fecha)">Unirse</a>
+            <div class="boton-perfil-card" *ngIf="fechaisLater(evento.fecha)">
+                <!--<button class="btn btn-sm btn-primary" (click)="unirseEvento(evento.id)" *ngIf="validarParticipacion(evento.id)">Unirse</button>-->
+                <button class="btn btn-sm btn-primary" (click)="unirseEvento(evento.id)">Unirse</button>
             </div>
         </footer>
     </article>
 </div>
 </div>
+
+<div class="modal fade" [id]="mimodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">{{modalTitle}}</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+
+          {{modalContent}}
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
