--- a/src/app/component/shared/unrouted/menu/menu.component.html
+++ b/src/app/component/shared/unrouted/menu/menu.component.html
@@ -44,7 +44,7 @@
         </li>
       </ul>
     </div>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+    <div class="collapse navbar-collapse justify-content-end">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/admin','usuario','view', strUsuarioId]" *ngIf="strUserName">{{strUserName}}</a>
