--- a/src/app/component/application/evento/routed/user/evento-plist-user-routed/evento-plist-user-routed.component.css
+++ b/src/app/component/application/evento/routed/user/evento-plist-user-routed/evento-plist-user-routed.component.css
@@ -56,3 +56,37 @@ article.card{
 .fondo{
     background-color: #968ca4;
 }
+
+.unirse-btn{
+    background-color: #222543;
+    color: #09a9d0;
+    border: 1px solid #09a9d0;
+    border-radius: 0px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  }
+
+  .unirse-btn:hover {
+    background-color: #09a9d0;
+    color: #222543;
+    border-color: #222543;
+    right: 0px;
+}
+
+.cancelar-btn{
+    background-color: #f70000;
+    color: #ffffff;
+    border: 1px solid #020607;
+    border-radius: 0px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  }
+
+  .cancelar-btn:hover {
+    background-color: #000000;
+    color: #ff0000;
+    border-color: #ff0000;
+    right: 0px;
+}
