--- a/src/app/component/shared/routed/login/login.component.css
+++ b/src/app/component/shared/routed/login/login.component.css
@@ -1,12 +1,10 @@
   .mobile-screen{
-    margin-top: 5%;
     margin-right: 10%;
     top: 0; left: 0; bottom: 0; right: 0;
     width: 300px;
-    height: 500px;
+    height: 550px;
     background: rgba(3,3,3,.7);
-    overflow: hidden;
-    float: right;
+
   }
 
   .header{
@@ -24,7 +22,7 @@
     text-align: center;
     font-weight: 300;
     font-size: 21px;
-    color: rgba(255,255,255,.5);
+    color: rgb(255, 255, 255);
   }
 
   .logo{
@@ -89,12 +87,7 @@
     text-decoration: none;
   }
 
-  .login-btn{
-    border-radius: 4px;
-    text-align: center;
-    background: #09a9d0;
-    color: #fff;
-  }
+  
 
   .login-btn{
     background-color: #222543;
@@ -111,4 +104,8 @@
     color: #222543;
     border-color: #222543;
     right: 0px;
+}
+.fondo{
+    background: url("/assets/fondomarruecos.jpg");
+    background-size: cover;
 }
