--- a/src/app/component/shared/routed/logout/logout.component.html
+++ b/src/app/component/shared/routed/logout/logout.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container m-5">
     <div class="row  justify-content-center">
       <div class="col-6">
         <h1 class="text-center mb-5">Salida del sistema</h1>
