home hecho y logo en navbar

--- a/src/app/component/shared/routed/home/home.component.html
+++ b/src/app/component/shared/routed/home/home.component.html
@@ -1,22 +1,11 @@
+<div class="background">
     <div id="container">
-        <div id="texto">
-            <div class="fondo-texto" id="texto1">
+            <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum maximus ornare. Aliquam erat
                 metus, efficitur lacinia ultrices at, ultrices eget nunc. Pellentesque in condimentum nisi. Donec
                 hendrerit metus lacus, non congue dolor mollis ut. Suspendisse blandit pellentesque dignissim. Nunc
                 tincidunt dolor in eros tristique suscipit. Vivamus at arcu sed justo iaculis venenatis.
-            </div>
-            <div class="fondo-texto" id="texto2">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum maximus ornare. Aliquam erat
-                metus, efficitur lacinia ultrices at, ultrices eget nunc. Pellentesque in condimentum nisi. Donec
-                hendrerit metus lacus, non congue dolor mollis ut. Suspendisse blandit pellentesque dignissim. Nunc
-                tincidunt dolor in eros tristique suscipit. Vivamus at arcu sed justo iaculis venenatis.
-            </div>
-            <div class="fondo-texto" id="texto3">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum maximus ornare. Aliquam erat
-                metus, efficitur lacinia ultrices at, ultrices eget nunc. Pellentesque in condimentum nisi. Donec
-                hendrerit metus lacus, non congue dolor mollis ut. Suspendisse blandit pellentesque dignissim. Nunc
-                tincidunt dolor in eros tristique suscipit. Vivamus at arcu sed justo iaculis venenatis.
-            </div>
+            </p>
         </div>
     </div>
+
