--- a/src/app/component/shared/unrouted/footer/footer.component.html
+++ b/src/app/component/shared/unrouted/footer/footer.component.html
@@ -9,21 +9,27 @@
                             Lorem ipsum dolor, sit amet consectetur adipisicing
                             elit. Sed voluptatem vitae reprehenderit amet
                             cupiditate eligendi qui quas libero quos repellendus
-                            rem rerum, non provident in.
+                            rem rerum, non provident in. Lorem ipsum, dolor sit
+                            amet consectetur adipisicing elit. Aut, laudantium
+                            dicta. Illum nesciunt ratione dolores. Repudiandae
+                            nam labore ad reiciendis!
                         </p>
                     </div>
                 </div>
 
                 <div class="col-xs-12 col-sm-6 col-md-3">
                     <div class="widget no-box">
-                        <h5 class="widget-title">Enlaces Rapidos<span></span></h5>
+                        <h5 class="widget-title">
+                            Enlaces Rapidos<span></span>
+                        </h5>
                         <ul class="thumbnail-widget">
                             <li>
                                 <div class="thumb-content">
                                     <a
                                         routerLinkActive="active"
                                         routerLink="user/evento/plist"
-                                        >Eventos</a>
+                                        >Eventos</a
+                                    >
                                 </div>
                             </li>
                             <li>
