--- a/src/app/component/shared/routed/home/home.component.css
+++ b/src/app/component/shared/routed/home/home.component.css
@@ -1,28 +1,25 @@
-#container{
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
-#texto{
-    color: aliceblue;
-
-
-}
-.fondo-texto{
-    backdrop-filter: blur(5px);
-    border-radius: 3%;
-}
-
-
-
-#container{
-    background-image: url("/assets/fondomarruecos.jpg");
-    background-repeat: no-repeat;
+.background {
+    background-image: url("https://images6.alphacoders.com/533/thumb-1920-533594.jpg");
     background-size: cover;
-
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: sans-serif;
 }
 
+#container {
+    text-align: center;
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 40px;
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 10px;
+}
 
+p {
+    color: #333;
+    font-size: 18px;
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
