--- a/src/app/component/shared/unrouted/menu/menu.component.html
+++ b/src/app/component/shared/unrouted/menu/menu.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand">CasaMarruecos</a>
+    <img src="/assets/casamarruecos-logo.png" alt="" height="auto" width="60px">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
       aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
