--- a/src/app/component/application/tipousuario/routed/tipousuario-plist-admin-routed/tipousuario-plist-admin-routed.component.html
+++ b/src/app/component/application/tipousuario/routed/tipousuario-plist-admin-routed/tipousuario-plist-admin-routed.component.html
@@ -13,7 +13,7 @@
             (eePage)="setPage($event)"></app-pagination-unrouted>
         </div>
         <table class="table table-bordered table-striped">
-          <thead>
+            <thead class="table-dark">
             <tr>
                 <th (click)="setOrder('id')">ID
                     <fa-icon *ngIf="sortField=='id'&&sortDirection=='asc'" [icon]="faArrowUp"></fa-icon>
