--- a/src/app/component/shared/routed/home/home.component.css
+++ b/src/app/component/shared/routed/home/home.component.css
@@ -1,5 +1,5 @@
 .background {
-    background-image: url("https://images6.alphacoders.com/533/thumb-1920-533594.jpg");
+    background-image: url("/assets/lamparas.jpg");
     background-size: cover;
     height: 100vh;
     display: flex;
