--- a/src/app/component/application/incidencia/unrouted/incidencia-finder-admin-unrouted/incidencia-finder-admin-unrouted.component.html
+++ b/src/app/component/application/incidencia/unrouted/incidencia-finder-admin-unrouted/incidencia-finder-admin-unrouted.component.html
@@ -13,15 +13,15 @@
             (eePage)="setPage($event)"></app-pagination-unrouted>
         </div>
         <div class="col-md text-start">
-          <h5 class="text-muted" *ngIf="strTermFilter!=''">Filtrando por {{strTermFilter}} (borrar para resetear)</h5>
+          <h5 class="" *ngIf="strTermFilter!=''">Filtrando por {{strTermFilter}} (borrar para resetear)</h5>
           <button class="btn btn-outline-danger" *ngIf="id_usuarioFilter!=0" (click)="setFilterByUsuario(0)">
             <i class="bi bi-x-circle"></i> Reset usuario {{id_usuarioFilter}} filter</button>
         </div>
         <div class="col-md text-end">
-          <h5 class="text-muted">Total de registros en la consulta {{responseFromServer.totalElements}}</h5>
+          <h5 class="">Total de registros en la consulta {{responseFromServer.totalElements}}</h5>
         </div>
         <table class="table table-bordered table-striped">
-          <thead>
+            <thead class="table-dark">
             <tr>
               <th (click)="setOrder('id')">ID
                 <fa-icon *ngIf="sortField=='id'&&sortDirection=='asc'" [icon]="faArrowUp"></fa-icon>
