--- a/src/app/component/shared/unrouted/footer/footer.component.html
+++ b/src/app/component/shared/unrouted/footer/footer.component.html
@@ -43,16 +43,15 @@
 
                 <div class="col-xs-12 col-sm-6 col-md-3">
                     <div class="widget no-box">
-                        <h5 class="widget-title">Get Started<span></span></h5>
+                        <h5 class="widget-title">Suscribirse<span></span></h5>
                         <p>
-                            Get access to your full Training and Marketing
-                            Suite.
+                            Si quieres estar al dia de nuestras novedades
                         </p>
                         <a
                             class="btn"
                             href="https://bit.ly/3m9avif"
                             target="_blank"
-                            >Subscribe Now</a
+                            >Suscribete Ya</a
                         >
                     </div>
                 </div>
