--- a/src/app/component/shared/unrouted/menu/menu.component.html
+++ b/src/app/component/shared/unrouted/menu/menu.component.html
@@ -47,7 +47,7 @@
     <div class="collapse navbar-collapse justify-content-end">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/admin','usuario','view', strUsuarioId]" *ngIf="strUserName">{{strUserName}}</a>
+            <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/user','usuario','view', strUsuarioId]" *ngIf="strUserName">{{strUserName}}</a>
           </li>
           <li class="nav-item" *ngIf="!strUserName">
             <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="login">Login</a>
