--- a/src/app/component/shared/unrouted/footer/footer.component.html
+++ b/src/app/component/shared/unrouted/footer/footer.component.html
@@ -9,10 +9,7 @@
                             Lorem ipsum dolor, sit amet consectetur adipisicing
                             elit. Sed voluptatem vitae reprehenderit amet
                             cupiditate eligendi qui quas libero quos repellendus
-                            rem rerum, non provident in. Lorem ipsum, dolor sit
-                            amet consectetur adipisicing elit. Aut, laudantium
-                            dicta. Illum nesciunt ratione dolores. Repudiandae
-                            nam labore ad reiciendis!
+                            rem rerum, non provident in. 
                         </p>
                     </div>
                 </div>
