--- a/src/app/component/application/evento/routed/evento-plist-admin-routed/evento-plist-admin-routed.component.html
+++ b/src/app/component/application/evento/routed/evento-plist-admin-routed/evento-plist-admin-routed.component.html
@@ -25,6 +25,7 @@
               </th>
               <th (click)="setOrder('fecha')">Fecha</th>
               <th (click)="setOrder('descripcion')">Descripcion</th>
+              <th>Imagen Representativa</th>
               <th>Usuarios</th>
               <th>Multimedias</th>
               <th>Acciones</th>
@@ -35,6 +36,7 @@
               <td>{{evento.id}}</td>
               <td>{{evento.fecha}}</td>
               <td>{{evento.descripcion}}</td>
+              <td class="imagen"><img src="{{evento.imagen}}" alt="" width="100%"></td>
               <td><button class="btn btn-outline-secondary btn-sm" (click)="openModalParticipacion(evento.id, evento.participaciones)"
                 [disabled]="evento.participaciones<=0">{{evento.participaciones}}</button></td>
               <td><button class="btn btn-outline-secondary btn-sm" [routerLink]="['/admin','multimedia','plist','evento',evento.id]"
