--- a/src/app/component/application/evento/unrouted/evento-detail-admin-unrouted/evento-detail-admin-unrouted.component.html
+++ b/src/app/component/application/evento/unrouted/evento-detail-admin-unrouted/evento-detail-admin-unrouted.component.html
@@ -1,4 +1,4 @@
-<table class="table table-bordered table-striped">
+<table class="table table-bordered table-striped d-flex justify-content-center">
     <tbody>
         <tr>
             <th>Id</th>
@@ -11,6 +11,10 @@
         <tr>
             <td>Descripcion</td>
             <td>{{oEvento.descripcion}}</td>
+        </tr>
+        <tr>
+            <td>Imagen</td>
+            <td class="imagen"><img src="{{oEvento.imagen}}" alt="" width="100%"></td>
         </tr>
     </tbody>
   </table>
