--- a/src/app/component/application/multimedia/unrouted/multimedia-detail-admin-unrouted/multimedia-detail-admin-unrouted.component.html
+++ b/src/app/component/application/multimedia/unrouted/multimedia-detail-admin-unrouted/multimedia-detail-admin-unrouted.component.html
@@ -6,7 +6,7 @@
         </tr>
         <tr>
             <td>Archivo</td>
-            <td><img src={{oMultimedia.archivo}} alt="" width="300px" height="auto"></td>
+            <td class="imagen"><img src={{oMultimedia.archivo}} alt="" width="100%"></td>
         </tr>
         <tr>
             <td>Evento ID</td>
