--- a/src/app/component/shared/routed/login/login.component.css
+++ b/src/app/component/shared/routed/login/login.component.css
@@ -31,7 +31,7 @@
     width: 150px;
     height: 150px;
     margin: auto;
-    background: url("../../../../../assets/casamarruecos.png") no-repeat center;
+    background: url("/assets/casamarruecos.png") no-repeat center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
