edit user, cambio de lugar boton de editar

--- a/src/app/component/application/usuario/routed/user/usuario-view-user-routed/usuario-view-user-routed.component.html
+++ b/src/app/component/application/usuario/routed/user/usuario-view-user-routed/usuario-view-user-routed.component.html
@@ -1,3 +1,4 @@
 <div class="fondo">
 <app-usuario-detail-user-unrouted [id]="id"></app-usuario-detail-user-unrouted>
+<button class="edit-button" [routerLink]="['/user/usuario/edit',id]">Editar usuario</button>
 </div>
