--- a/src/app/component/application/usuario/routed/user/usuario-view-user-routed/usuario-view-user-routed.component.css
+++ b/src/app/component/application/usuario/routed/user/usuario-view-user-routed/usuario-view-user-routed.component.css
@@ -1,1 +1,19 @@
+.edit-button {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    background-color: #222543;
+    color: #09a9d0;
+    border-color: #09a9d0;
+    border-radius: 10px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  }
 
+  .edit-button:hover {
+    background-color: #09a9d0;
+    color: #222543;
+    border-color: #222543;
+    right: 0px;
+}
