--- a/src/app/component/application/usuario/routed/user/usuario-edit-user-routed/usuario-edit-user-routed.component.css
+++ b/src/app/component/application/usuario/routed/user/usuario-edit-user-routed/usuario-edit-user-routed.component.css
@@ -2,6 +2,7 @@ form {
     max-width: 500px;
     margin: 0 auto;
     margin-top: 2%;
+    margin-bottom: 2%;
     padding: 20px;
     background: rgba(3,3,3,.7);
     box-shadow: 0 0 12px #ffffff;
