--- a/src/app/component/application/tipousuario/routed/tipousuario-edit-admin-routed/tipousuario-edit-admin-routed.component.html
+++ b/src/app/component/application/tipousuario/routed/tipousuario-edit-admin-routed/tipousuario-edit-admin-routed.component.html
@@ -42,7 +42,7 @@
           [disabled]="!oForm.dirty || (oForm.invalid && oForm.dirty)">Guardar</button>
 
         </form>
-
+        <div class="goback"><button class="goback-btn" routerLink="/admin/tipousuario/plist">Volver atrás</button></div>
       </div>
     </div>
   </div>
