--- a/src/app/component/application/tipousuario/routed/tipousuario-view-admin-routed/tipousuario-view-admin-routed.component.html
+++ b/src/app/component/application/tipousuario/routed/tipousuario-view-admin-routed/tipousuario-view-admin-routed.component.html
@@ -4,5 +4,6 @@
             <h1 class="text-center mb-5">Vista del Tipo de Usuario</h1>
             <app-tipousuario-detail-admin-unrouted [id]="id"></app-tipousuario-detail-admin-unrouted>
         </div>
+        <div class="goback"><button class="goback-btn" routerLink="/admin/tipousuario/plist">Volver atrás</button></div>
     </div>
 </div>
