--- a/src/app/component/application/usuario/routed/usuario-edit-admin-routed/usuario-edit-admin-routed.component.html
+++ b/src/app/component/application/usuario/routed/usuario-edit-admin-routed/usuario-edit-admin-routed.component.html
@@ -169,6 +169,7 @@
       </div>
     </div>
   </div>
+  <div class="goback"><button class="goback-btn" routerLink="/admin/usuario/plist">Volver atrás</button></div>
 
   <div class="modal fade" [id]="mimodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm">
