--- a/src/app/component/application/usuario/routed/usuario-view-admin-routed/usuario-view-admin-routed.component.html
+++ b/src/app/component/application/usuario/routed/usuario-view-admin-routed/usuario-view-admin-routed.component.html
@@ -4,5 +4,6 @@
             <h1 class="text-center mb-5">Vista del Usuario</h1>
             <app-usuario-detail-admin-unrouted [id]="id"></app-usuario-detail-admin-unrouted>
         </div>
+        <div class="goback"><button class="goback-btn" routerLink="/admin/usuario/plist">Volver atrás</button></div>
     </div>
 </div>
