--- a/src/app/component/application/accion/routed/accion-new-admin-routed/accion-new-admin-routed.component.html
+++ b/src/app/component/application/accion/routed/accion-new-admin-routed/accion-new-admin-routed.component.html
@@ -68,7 +68,7 @@
             [disabled]="!oForm.dirty || (oForm.invalid && oForm.dirty)">Guardar</button>
 
         </form>
-
+        <div class="goback"><button class="goback-btn" routerLink="/admin/accion/plist">Volver atrás</button></div>
       </div>
     </div>
   </div>
