--- a/src/app/component/application/evento/routed/evento-new-admin-routed/evento-new-admin-routed.component.html
+++ b/src/app/component/application/evento/routed/evento-new-admin-routed/evento-new-admin-routed.component.html
@@ -67,7 +67,7 @@
             [disabled]="!oForm.dirty || (oForm.invalid && oForm.dirty)">Guardar</button>
 
         </form>
-
+        <div class="goback"><button class="goback-btn" routerLink="/admin/evento/plist">Volver atrás</button></div>
       </div>
     </div>
   </div>
