--- a/src/app/component/application/evento/routed/evento-view-admin-routed/evento-view-admin-routed.component.html
+++ b/src/app/component/application/evento/routed/evento-view-admin-routed/evento-view-admin-routed.component.html
@@ -4,5 +4,6 @@
             <h1 class="text-center mb-5">Vista del Accion</h1>
             <app-evento-detail-admin-unrouted [id]="id"></app-evento-detail-admin-unrouted>
         </div>
+        <div class="goback"><button class="goback-btn" routerLink="/admin/evento/plist">Volver atrás</button></div>
     </div>
 </div>
