--- a/src/app/component/application/incidencia/routed/incidencia-new-admin-routed/incidencia-new-admin-routed.component.html
+++ b/src/app/component/application/incidencia/routed/incidencia-new-admin-routed/incidencia-new-admin-routed.component.html
@@ -92,7 +92,7 @@
             [disabled]="!oForm.dirty || (oForm.invalid && oForm.dirty)">Guardar</button>
 
         </form>
-
+        <div class="goback"><button class="goback-btn" routerLink="/admin/incidencia/plist">Volver atrás</button></div>
       </div>
     </div>
   </div>
