--- a/src/app/component/application/incidencia/routed/incidencia-view-admin-routed/incidencia-view-admin-routed.component.html
+++ b/src/app/component/application/incidencia/routed/incidencia-view-admin-routed/incidencia-view-admin-routed.component.html
@@ -4,5 +4,6 @@
             <h1 class="text-center mb-5">Vista del Incidencia</h1>
             <app-incidencia-detail-admin-unrouted [id]="id"></app-incidencia-detail-admin-unrouted>
         </div>
+        <div class="goback"><button class="goback-btn" routerLink="/admin/incidencia/plist">Volver atrás</button></div>
     </div>
 </div>
