--- a/src/app/component/application/multimedia/routed/multimedia-new-admin-routed/multimedia-new-admin-routed.component.html
+++ b/src/app/component/application/multimedia/routed/multimedia-new-admin-routed/multimedia-new-admin-routed.component.html
@@ -33,7 +33,7 @@
             [disabled]="!oForm.dirty || (oForm.invalid && oForm.dirty)">Guardar</button>
 
         </form>
-
+        <div class="goback"><button class="goback-btn" routerLink="/admin/multimedia/plist">Volver atrás</button></div>
       </div>
     </div>
   </div>
