--- a/src/app/component/application/multimedia/routed/multimedia-view-admin-routed/multimedia-view-admin-routed.component.html
+++ b/src/app/component/application/multimedia/routed/multimedia-view-admin-routed/multimedia-view-admin-routed.component.html
@@ -4,5 +4,6 @@
             <h1 class="text-center mb-5">Vista de la Multimedia</h1>
             <app-multimedia-detail-admin-unrouted [id]="id"></app-multimedia-detail-admin-unrouted>
         </div>
+        <div class="goback"><button class="goback-btn" routerLink="/admin/multimedia/plist">Volver atrás</button></div>
     </div>
 </div>
