--- a/src/app/component/application/tipousuario/routed/tipousuario-new-admin-routed/tipousuario-new-admin-routed.component.html
+++ b/src/app/component/application/tipousuario/routed/tipousuario-new-admin-routed/tipousuario-new-admin-routed.component.html
@@ -34,7 +34,7 @@
             [disabled]="!oForm.dirty || (oForm.invalid && oForm.dirty)">Guardar</button>
 
         </form>
-
+        <div class="goback"><button class="goback-btn" routerLink="/admin/tipousuario/plist">Volver atrás</button></div>
       </div>
     </div>
   </div>
