--- a/src/app/component/application/usuario/routed/usuario-new-admin-routed/usuario-new-admin-routed.component.html
+++ b/src/app/component/application/usuario/routed/usuario-new-admin-routed/usuario-new-admin-routed.component.html
@@ -158,7 +158,7 @@
             [disabled]="!oForm.dirty || (oForm.invalid && oForm.dirty)">Guardar</button>
 
         </form>
-
+        <div class="goback"><button class="goback-btn" routerLink="/admin/usuario/plist">Volver atrás</button></div>
       </div>
     </div>
   </div>
