--- a/src/app/component/shared/routed/login/login.component.css
+++ b/src/app/component/shared/routed/login/login.component.css
@@ -1,106 +1,110 @@
-  .mobile-screen{
-    margin-right: 10%;
-    top: 0; left: 0; bottom: 0; right: 0;
-    width: 300px;
-    height: 550px;
-    background: rgba(3,3,3,.7);
+  .mobile-screen {
+      margin-right: 10%;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      width: 300px;
+      height: 550px;
+      background: rgba(3, 3, 3, .7);
 
   }
 
-  .header{
+  .header {
 
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: auto;
-    background: rgba(3,3,3,.1);
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: auto;
+      background: rgba(3, 3, 3, .1);
   }
 
-  h1{
-    margin: 0;
-    padding: 10px 0;
-    text-align: center;
-    font-weight: 300;
-    font-size: 21px;
-    color: rgb(255, 255, 255);
+  h1 {
+      margin: 0;
+      padding: 10px 0;
+      text-align: center;
+      font-weight: 300;
+      font-size: 21px;
+      color: rgb(255, 255, 255);
   }
 
-  .logo{
+  .logo {
 
-    top: 30px;
-    width: 150px;
-    height: 150px;
-    margin: auto;
-    background: url("/assets/casamarruecos.png") no-repeat center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+      top: 30px;
+      width: 150px;
+      height: 150px;
+      margin: auto;
+      background: url("/assets/casamarruecos.png") no-repeat center;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
 
   }
 
-  form{
-    bottom: 50px;
-    width: 100%;
+  form {
+      bottom: 50px;
+      width: 100%;
   }
 
   input,
-  .login-btn{
-    font-family: 'Open Sans', sans-serif;
-    display: block;
-    margin: 20px auto;
-    padding: 10px;
-    width: 84%;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
+  .login-btn {
+      font-family: 'Open Sans', sans-serif;
+      display: block;
+      margin: 20px auto;
+      padding: 10px;
+      width: 84%;
+      box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      -webkit-box-sizing: border-box;
   }
 
-  input{
-    border: none;
-    border-left: 5px solid;
-    background: none;
-    background-color: #d0dee9;
-    border-color: #09a9d0;
-    color: black;
-    font-weight: 300;
-    font-size: 18px;
-    -webkit-transition: all .2s ease-in-out;
-    -moz-transition: all .2s ease-in-out;
-    -o-transition: all .2s ease-in-out;
-    transition: all .2s ease-in-out;
+  input {
+      border: none;
+      border-left: 5px solid;
+      background: none;
+      background-color: #d0dee9;
+      border-color: #09a9d0;
+      color: black;
+      font-weight: 300;
+      font-size: 18px;
+      -webkit-transition: all .2s ease-in-out;
+      -moz-transition: all .2s ease-in-out;
+      -o-transition: all .2s ease-in-out;
+      transition: all .2s ease-in-out;
   }
 
-  input:focus{
-    outline: 0;
-    background: #958ca3;
-    border-radius: 20px;
-    border-color: transparent;
+  input:focus {
+      outline: 0;
+      background: #958ca3;
+      border-radius: 20px;
+      border-color: transparent;
   }
 
-  button{
-    text-decoration: none;
+  button {
+      text-decoration: none;
   }
 
 
 
-  .login-btn{
-    background-color: #222543;
-    color: #09a9d0;
-    border-color: #09a9d0;
-    border-radius: 6px;
-    font-weight: bold;
-    letter-spacing: 1px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  .login-btn {
+      background-color: #222543;
+      color: #09a9d0;
+      border-color: #09a9d0;
+      border-radius: 6px;
+      font-weight: bold;
+      letter-spacing: 1px;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   }
 
   .login-btn:hover {
-    background-color: #09a9d0;
-    color: #222543;
-    border-color: #222543;
-    right: 0px;
-}
-.fondo{
-    background: url("/assets/fondomarruecos.jpg");
-    background-size: cover;
-}
+      background-color: #09a9d0;
+      color: #222543;
+      border-color: #222543;
+      right: 0px;
+  }
+
+  .fondo {
+      background: url("/assets/fondomarruecos.jpg");
+      background-size: cover;
+  }
