--- a/src/styles.css
+++ b/src/styles.css
@@ -18,4 +18,25 @@ label{
     font-weight: bold;
 }
 
+.goback{
+    margin: 2%;
+    text-align: center;
+}
+
+.goback-btn {
+    background-color: #222543;
+    color: #09a9d0;
+    border-color: #09a9d0;
+    border-radius: 6px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.goback-btn:hover {
+    background-color: #09a9d0;
+    color: #222543;
+    border-color: #222543;
+    right: 0px;
+}
 
