menu responsive arreglado, evento plist user buscador añadido y cambio a user edit

--- a/src/app/component/application/evento/routed/user/evento-plist-user-routed/evento-plist-user-routed.component.html
+++ b/src/app/component/application/evento/routed/user/evento-plist-user-routed/evento-plist-user-routed.component.html
@@ -2,6 +2,7 @@
     <div class="paginacion m-5" >
     <app-pagination-unrouted [nPage]="responseFromServer.number + 1" [nTotalPages]="responseFromServer.totalPages"
     (eePage)="setPage($event)"></app-pagination-unrouted>
+    <app-search-unrouted class="d-flex justify-content-center" [placeHolder]="'Buscar evento'" (onSearch)="setFilter( $event )"></app-search-unrouted>
     </div>
 <div class="card-wrap">
     <article class="card" *ngFor="let evento of responseFromServer.content">
