--- a/src/app/component/application/usuario/routed/user/usuario-edit-user-routed/usuario-edit-user-routed.component.html
+++ b/src/app/component/application/usuario/routed/user/usuario-edit-user-routed/usuario-edit-user-routed.component.html
@@ -14,7 +14,7 @@
     <label for="email">Email:</label>
     <input type="text" id="email" name="email" formControlName="email">
     </div>
-    <button type="submit" class="edit-btn" [disabled]="!oForm.dirty || (oForm.invalid && oForm.dirty)">Enviar</button>
+    <button type="submit" class="edit-btn" [disabled]="!oForm.dirty || (oForm.invalid && oForm.dirty)">Editar</button>
 </form>
 
 <div class="modal fade" [id]="mimodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
