--- a/src/app/component/shared/unrouted/menu/menu.component.html
+++ b/src/app/component/shared/unrouted/menu/menu.component.html
@@ -1,61 +1,60 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <img src="/assets/casamarruecos-logo.png" alt="" height="auto" width="60px">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
-      aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarColor01">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="home">Home</a>
-        </li>
-        <li class="nav-item" *ngIf="strTipousuario=='1'">
-          <a class="nav-link" aria-current="page" routerLinkActive="active"
-            routerLink="admin/usuario/plist">Usuarios</a>
-        </li>
-        <li class="nav-item" *ngIf="strTipousuario=='1'">
-            <a class="nav-link" aria-current="page" routerLinkActive="active"
-              routerLink="admin/tipousuario/plist">Tipo Usuario</a>
-        </li>
-        <li class="nav-item" *ngIf="strTipousuario=='1'">
-            <a class="nav-link" aria-current="page" routerLinkActive="active"
-              routerLink="admin/incidencia/plist">Incidencias</a>
-        </li>
-        <li class="nav-item" *ngIf="strTipousuario=='1'">
-            <a class="nav-link" aria-current="page" routerLinkActive="active"
-              routerLink="admin/accion/plist">Acciones</a>
-        </li>
-        <li class="nav-item" *ngIf="strTipousuario=='1'">
-            <a class="nav-link" aria-current="page" routerLinkActive="active"
-              routerLink="admin/evento/plist">Eventos</a>
-        </li>
-        <li class="nav-item" *ngIf="strTipousuario=='1' || strTipousuario=='2'" >
-            <a class="nav-link" aria-current="page" routerLinkActive="active"
-              routerLink="user/evento/plist">Eventos</a>
-        </li>
-        <li class="nav-item" *ngIf="strTipousuario=='1'">
-            <a class="nav-link" aria-current="page" routerLinkActive="active"
-              routerLink="admin/multimedia/plist">Multimedias</a>
-        </li>
-        <li class="nav-item" *ngIf="strTipousuario=='1'">
-            <a class="nav-link" aria-current="page" routerLinkActive="active"
-              routerLink="generate">Generate</a>
-        </li>
-      </ul>
+    <div class="container-fluid">
+        <img src="/assets/casamarruecos-logo.png" alt="" height="auto" width="60px">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
+            aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="home">Home</a>
+                </li>
+                <li class="nav-item" *ngIf="strTipousuario=='1'">
+                    <a class="nav-link" aria-current="page" routerLinkActive="active"
+                        routerLink="admin/usuario/plist">Usuarios</a>
+                </li>
+                <li class="nav-item" *ngIf="strTipousuario=='1'">
+                    <a class="nav-link" aria-current="page" routerLinkActive="active"
+                        routerLink="admin/tipousuario/plist">Tipo Usuario</a>
+                </li>
+                <li class="nav-item" *ngIf="strTipousuario=='1'">
+                    <a class="nav-link" aria-current="page" routerLinkActive="active"
+                        routerLink="admin/incidencia/plist">Incidencias</a>
+                </li>
+                <li class="nav-item" *ngIf="strTipousuario=='1'">
+                    <a class="nav-link" aria-current="page" routerLinkActive="active"
+                        routerLink="admin/accion/plist">Acciones</a>
+                </li>
+                <li class="nav-item" *ngIf="strTipousuario=='1'">
+                    <a class="nav-link" aria-current="page" routerLinkActive="active"
+                        routerLink="admin/evento/plist">Eventos</a>
+                </li>
+                <li class="nav-item" *ngIf="strTipousuario=='1' || strTipousuario=='2'">
+                    <a class="nav-link" aria-current="page" routerLinkActive="active"
+                        routerLink="user/evento/plist">Eventos</a>
+                </li>
+                <li class="nav-item" *ngIf="strTipousuario=='1'">
+                    <a class="nav-link" aria-current="page" routerLinkActive="active"
+                        routerLink="admin/multimedia/plist">Multimedias</a>
+                </li>
+                <li class="nav-item" *ngIf="strTipousuario=='1'">
+                    <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="generate">Generate</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" routerLinkActive="active"
+                        [routerLink]="['/user','usuario','view', strUsuarioId]" *ngIf="strUserName">{{strUserName}}</a>
+                </li>
+                <li class="nav-item" *ngIf="!strUserName">
+                    <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="login">Login</a>
+                </li>
+                <li class="nav-item" *ngIf="strUserName">
+                    <a class="nav-link" aria-current="page" routerLinkActive="active"
+                        [routerLink]="['/logout']">Logout</a>
+                </li>
+            </ul>
+        </div>
     </div>
-    <div class="collapse navbar-collapse justify-content-end">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/user','usuario','view', strUsuarioId]" *ngIf="strUserName">{{strUserName}}</a>
-          </li>
-          <li class="nav-item" *ngIf="!strUserName">
-            <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="login">Login</a>
-          </li>
-          <li class="nav-item" *ngIf="strUserName">
-            <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/logout']">Logout</a>
-          </li>
-        </ul>
-      </div>
-  </div>
 </nav>
